# SENTINEL

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/app/: config.py  main.py
api/app/agents/: anomaly_watcher.py  events.py  graph.py  schema_detector.py  schema_detector_test.py  state.py
api/app/agents/nodes/: cleaning.py  eda.py  feature_engineering.py  forecast.py  narrator.py  profiler.py  schema_join.py  segmentation.py
api/app/db/: models.py  session.py
api/app/routers/: chat.py  data.py  manifest.py  n8n_proxy.py  pipeline.py  report.py
api/app/tools/: data_tools.py  eda_tools.py  ml_tools.py  pdf_tools.py
api/app/worker/: main.py
data/n8n-workflows/: workflow-1-upload-trigger.json  workflow-2-scheduled-refresh.json  workflow-4-run-complete.json
docs/superpowers/plans/: 2026-04-09-bugfixes-chatbot-kpi-perf.md
n8n-workflows/: workflow-3-anomaly-alert.json  workflow-5-human-feedback.json
scripts/: inject-anomaly.py  seed.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chat/[runId]/: route.ts
web/src/app/api/events/[runId]/: route.ts
web/src/app/api/forecast/[runId]/: route.ts
web/src/app/api/manifest/[runId]/: route.ts
web/src/app/api/run/[runId]/: route.ts
web/src/app/api/segments/[runId]/: route.ts
web/src/app/api/upload/: route.ts
web/src/app/history/: page.tsx
web/src/app/run/[id]/: page.tsx
web/src/app/upload/: page.tsx
web/src/components/charts/: ChartTab.tsx  ChatTab.tsx  DashboardTabs.tsx  ForecastTab.tsx  InsightsTab.tsx  KpiTab.tsx  LineageTab.tsx  SegmentsTab.tsx
web/src/components/layout/: NavBar.tsx  QueryProvider.tsx
web/src/components/pipeline/: AgentFeed.tsx  AlertFeed.tsx  FeedbackPanel.tsx  MermaidDag.tsx  N8nStatus.tsx  PipelineStepper.tsx
web/src/lib/: demo-data.ts  manifest-context.tsx  manifest.ts  store.ts
